--- a/i18n/text_strings/client/en.json
+++ b/i18n/text_strings/client/en.json
@@ -1,3 +1,5 @@
 {
-  "test": "en-test"
+  "test": "en-test",
+  "crime_near_you_title": "Crime near you",
+  "crime_near_you_subtitle": "See all the crimes and incidents around you."
 }
