--- a/i18n/text_strings/client/sv.json
+++ b/i18n/text_strings/client/sv.json
@@ -1,3 +1,5 @@
 {
-  "test": "sv-test"
+  "test": "sv-test",
+  "crime_near_you_title": "Nära dig",
+  "crime_near_you_subtitle": "Se alla brott och insidenter nära dig"
 }
