--- a/i18n/text_strings/client/sv.json
+++ b/i18n/text_strings/client/sv.json
@@ -1,5 +1,11 @@
 {
   "test": "sv-test",
   "crime_near_you_title": "Nära dig",
-  "crime_near_you_subtitle": "Se alla brott och insidenter nära dig"
+  "crime_near_you_subtitle": "Se alla brott och insidenter nära dig",
+  "crime_search_title": "Sök",
+  "crime_search_subtitle": "Sök efter vad som helst! Brott, plats...",
+  "crime_forum_title": "Forum",
+  "crime_forum_subtitle": "Talk about whats going on with others",
+  "crime_statistics_title": "Statistik",
+  "crime_statistics_subtitle": "Se över brottstatistiken"
 }
