--- a/i18n/text_strings/client/sv.json
+++ b/i18n/text_strings/client/sv.json
@@ -5,7 +5,7 @@
   "crime_search_title": "Sök",
   "crime_search_subtitle": "Sök efter vad som helst! Brott, plats...",
   "crime_forum_title": "Forum",
-  "crime_forum_subtitle": "Talk about whats going on with others",
+  "crime_forum_subtitle": "Prata med andra om brott",
   "crime_statistics_title": "Statistik",
   "crime_statistics_subtitle": "Se över brottstatistiken"
 }
