get position get crimes

--- a/i18n/text_strings/client/en.json
+++ b/i18n/text_strings/client/en.json
@@ -7,5 +7,6 @@
   "crime_forum_title": "Forum",
   "crime_forum_subtitle": "Talk about whats going on with others",
   "crime_statistics_title": "Statistics",
-  "crime_statistics_subtitle": "Check out the crime-rates and more"
+  "crime_statistics_subtitle": "Check out the crime-rates and more",
+  "general_loading": "Loading..."
 }
