--- a/i18n/text_strings/client/sv.json
+++ b/i18n/text_strings/client/sv.json
@@ -7,5 +7,6 @@
   "crime_forum_title": "Forum",
   "crime_forum_subtitle": "Prata med andra om brott",
   "crime_statistics_title": "Statistik",
-  "crime_statistics_subtitle": "Se över brottstatistiken"
+  "crime_statistics_subtitle": "Se över brottstatistiken",
+  "general_loading": "Laddar..."
 }
