--- a/i18n/text_strings/client/en.json
+++ b/i18n/text_strings/client/en.json
@@ -8,5 +8,7 @@
   "crime_forum_subtitle": "Talk about whats going on with others",
   "crime_statistics_title": "Statistics",
   "crime_statistics_subtitle": "Check out the crime-rates and more",
-  "general_loading": "Loading..."
+  "general_loading": "Loading...",
+  "no_crime_found_text": "No crime found",
+  "no_crime_found_emoji": "🤗"
 }
