--- a/i18n/text_strings/client/sv.json
+++ b/i18n/text_strings/client/sv.json
@@ -8,5 +8,7 @@
   "crime_forum_subtitle": "Prata med andra om brott",
   "crime_statistics_title": "Statistik",
   "crime_statistics_subtitle": "Se över brottstatistiken",
-  "general_loading": "Laddar..."
+  "general_loading": "Laddar...",
+  "no_crime_found_text": "Finns inga brott här",
+  "no_crime_found_emoji": "🤗"
 }
