added title, extended statistic container,

--- a/i18n/text_strings/client/sv.json
+++ b/i18n/text_strings/client/sv.json
@@ -1,13 +1,13 @@
 {
   "test": "sv-test",
   "crime_near_you_title": "Nära dig",
-  "crime_near_you_subtitle": "Se alla brott och insidenter nära dig",
+  "crime_near_you_subtitle": "Se alla brott nära dig",
   "crime_search_title": "Sök",
-  "crime_search_subtitle": "Sök efter vad som helst! Brott, plats...",
+  "crime_search_subtitle": "Sök efter brottstyp, plats eller datum",
   "crime_forum_title": "Forum",
   "crime_forum_subtitle": "Prata med andra om brott",
   "crime_statistics_title": "Statistik",
-  "crime_statistics_subtitle": "Se över brottstatistiken",
+  "crime_statistics_subtitle": "Se veckans brottstatistik",
   "general_loading": "Laddar...",
   "no_crime_found_text": "Finns inga brott här",
   "no_crime_found_emoji": "🤗",
